--- a/sas/index.html
+++ b/sas/index.html
@@ -18,11 +18,11 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/v4-shims.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7COswald:400,700%7CDroid+Sans:400,700%7CRoboto:400,700%7CLato:400,700%7CPT+Sans:400,700%7CSource+Sans+Pro:400,600,700%7CNoto+Sans:400,700%7CPT+Sans:400,700%7CUbuntu:400,700%7CBitter:400,700%7CPT+Serif:400,700%7CRokkitt:400,700%7CDroid+Serif:400,700%7CRaleway:400,700%7CInconsolata:400,700" rel="stylesheet" type="text/css">
-<meta property="cf:funnel_id" content="czdyN3lVMHBIb2YzT2s3WklHZ3Vidz09LS1GcUZOOUhWM0l2UzlSblFvQkNESmJ3PT0=--b6643669fc22647c5de8bdf773d4972e5aafb6e6">
-<meta property="cf:page_id" content="b0ljOXVYYUdUSkcyZ0ZuTkdUTnVCdz09LS12YUZGS1Q3T3dKZTFiZTRBd2g5L3dnPT0=--0fea180cf96a5fb787604bc90997e6f7141dcd0e">
-<meta property="cf:funnel_step_id" content="S2hidkhoZHFFbWlkaENNREpvbjdSZz09LS1RbFJJTUF1b2VIT1p2MGRtVkVTb0pBPT0=--35593d614a3cb2700c55af74adba61773a1b137e">
-<meta property="cf:user_id" content="bW5Dc3lkYXpGRFA0UURXRTlMT2lsdz09LS1pek5hSGFnMEpIQnRTZzNaL0lOZHdnPT0=--ca15dd84e64ef837aae108a6a9df8c40e5f97678">
-<meta property="cf:account_id" content="emhpNFU4RW9OZ25jelpIdWxQL2w0UT09LS1tUXNyMkkwc1lwQTFiY3I5ZmQwbnJnPT0=--46029028e1d951c7a4f1096315ccdc3d506038c1">
+<meta property="cf:funnel_id" content="b1dCUzZUT0tQbmFWOVhmNUVlelM1QT09LS1ybFllUzBJcUMvRU1Ld3dyNkFLUy9BPT0=--cf1778ba0db4c4e72267ba301ccefa38b2de7bb1">
+<meta property="cf:page_id" content="cGxIeVFRVUNOL0FnTnJtWGUrU1lxZz09LS1uTzNEMHhMM3NGZDlidllDZ1lJejVBPT0=--e1512d249dc3662f6aea6acf50dc1c25f16576e0">
+<meta property="cf:funnel_step_id" content="MC9wRXMzWGNsbXdSSlRJbGYxa21LZz09LS1jRnFZUVhHQXlaUytoLzlFOGdJUEtnPT0=--3e130efe7f2af38f59a6d0d8533a7f716c36b923">
+<meta property="cf:user_id" content="SXRmaHl4a3J4d3B1Zmh3R2h2cWN1QT09LS1mWCsvS0gwNjhhTXd3NDN5ZkVKNEpRPT0=--4b17c1d1854b5ffa8b96fdbe2f7d5f040da128c9">
+<meta property="cf:account_id" content="dkRCNlQxY29GUm5MTDdSWUVaTjJOZz09LS12REordTZqYzZoTi9iUDVKb2pmVzVRPT0=--86d43bae906e16f514b726862cd8da6f4364da6b">
 <meta property="cf:page_code" content="MzY2ODc3MzQ=">
 <meta property="cf:mode_id" content="1">
 <meta property="cf:time_zone" content="UTC">
@@ -107,8 +107,8 @@
 <div class="row bgCover noBorder borderSolid border3px cornersAll P0-top P0-bottom P0H noTopMargin radius5 cfRowAlignCenter shadow40inner" id="row--33716" data-trigger="none" data-animate="fade" data-delay="500" data-title="1 column row" style="padding: 35px 55px 50px; margin: 55px 146px 0px; outline: none; background-color: rgba(4, 25, 31, 0.93); width: auto; max-width: 100%;">
 <div id="col-full-161" class="col-md-12 innerContent col_left" data-col="full" data-trigger="none" data-animate="fade" data-delay="500" data-title="1st column" style="outline: none;">
 <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
-<div class="de elHeadlineWrapper ui-droppable hiddenElementTools de-editable" id="tmp_headline1-56881" data-de-type="headline" data-de-editing="false" data-title="headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; display: block; cursor: pointer; background-color: rgba(45, 45, 45, 0); font-family: Ubuntu, Helvetica, sans-serif !important;" aria-disabled="false" data-google-font="Ubuntu" data-htype="content" data-hide-on="">
-<div class="ne elHeadline hsSize3 elMargin0 elBGStyle0 deNormalLS lh1 hsTextShadow3 de1column padding0 noBorder mfs_27" style="text-align: center; font-size: 34px; color: rgb(255, 227, 0); background-color: rgba(45, 45, 45, 0);" data-bold="inherit" contenteditable="false"><b>"FREE LIVE TRAINING!-Reveals The SECRET Method That John use to make a 6-Figure Side-Income Working online Even If he spends his time on his favorite place with his love ones"</b></div>
+<div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_headline1-56881" data-de-type="headline" data-de-editing="false" data-title="headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; display: block; cursor: pointer; background-color: rgba(45, 45, 45, 0); font-family: Ubuntu, Helvetica, sans-serif !important;" aria-disabled="false" data-google-font="Ubuntu" data-htype="content" data-hide-on="">
+<div class="ne elHeadline hsSize3 elMargin0 elBGStyle0 deNormalLS hsTextShadow3 de1column padding0 noBorder lh3 mfs_25" style="text-align: center; font-size: 40px; color: rgb(255, 227, 0); background-color: rgba(45, 45, 45, 0);" data-bold="inherit" contenteditable="false"><b>"<u>FREE LIVE TRAINING</u>!-Reveals The SECRET Method That John use to make a 6-Figure Side-Income Working online Even If he spends his time on his favorite place with his love ones"</b></div>
 </div>
 <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-79895" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 55px; outline: none; cursor: pointer;" aria-disabled="false">
 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0 mfs_20" style="text-align: center; font-size: 22px; color: rgb(255, 255, 255);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(Warning: This Video Will Change Your Life...)</b></h2>
@@ -141,8 +141,8 @@
 <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-64847" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style='margin-top: 10px; outline: none; cursor: pointer; font-family: "Open Sans", Helvetica, sans-serif !important;' data-google-font="Open+Sans" aria-disabled="false" data-htype="headline">
 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0 deUppercase" style="text-align: center; font-size: 22px; color: rgb(253, 235, 86);" data-bold="inherit" data-gramm="false" contenteditable="false" data-opacity="1"><b>Spots are filling up, So make sure to register right away to secure your spot.</b></h2>
 </div>
-<div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="button-93633" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 65px; outline: none; cursor: pointer;" aria-disabled="false" data-element-theme="customized">
-<a href="http://pages.today/sasdigiemail" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1_3 elButtonShadowN3 elButtonTxtColor2 elBTNone elButtonBlock" style="color: rgb(255, 255, 255); background: rgb(228, 59, 44); font-size: 34px;" rel="noopener noreferrer" id="undefined-819">
+<div class="de elBTN elAlign_center elMargin0 ui-droppable elButtonBlock de-editable" id="button-93633" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="scale" data-delay="500" style="margin-top: 65px; outline: none; cursor: pointer;" aria-disabled="false" data-element-theme="customized" data-timed-style="no-action" data-timed-seconds="05" data-elbuttontype="1">
+<a href="https://offerus.design/freetrainingsasemail" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elBtnHP_25 elBTN_b_1_3 elButtonShadowN3 elButtonTxtColor2 elButtonBlock elButtonFluid elBTNone ea-buttonElevate" style="color: rgb(255, 255, 255); background: rgb(228, 59, 44); font-size: 34px;" rel="noopener noreferrer" id="undefined-819">
 <span class="elButtonMain"><i class="fa_prepended fas fa-angle-double-right" contenteditable="false"></i> Yes, I Want To Change My Life </span>
 <span class="elButtonSub"></span>
 </a>
@@ -176,15 +176,15 @@
 </div>
 <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-93772" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 40px; outline: none; cursor: pointer;" aria-disabled="false">
 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 26px; color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false">
-<b></b><a href="https://offerus.design/sasemailtrack" id="link-98422" class="" target="_self" rel="noopener noreferrer" style="color: rgb(246, 217, 0);">Space is extremely limited. This training will be taken down soon.
+<b></b><a href="https://offerus.design/freetrainingsasemail" id="link-98422" class="" target="_self" rel="noopener noreferrer" style="color: rgb(246, 217, 0);">Space is extremely limited. This training will be taken down soon.
 </a><div><br></div>
 </h2>
 </div>
-<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-44867" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
+<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable hiddenElementTools de-editable" id="tmp_image-44867" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
 <img src="https://media.giphy.com/media/TfQjT0OXCBr7TQQuwx/giphy.gif" class="elIMG ximg" alt="" width="300" height="300">
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="tmp_button-62212" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false" data-element-theme="customized">
-<a href="https://offerus.design/sasdigiemail" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1_3 elButtonShadowN3 elButtonTxtColor2 elBTNone elButtonBlock" style="color: rgb(255, 255, 255); background: rgb(228, 59, 44); font-size: 34px;" rel="noopener noreferrer">
+<a href="https://offerus.design/freetrainingsasemail" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1_3 elButtonShadowN3 elButtonTxtColor2 elBTNone elButtonBlock ea-buttonElevate" style="color: rgb(255, 255, 255); background: rgb(228, 59, 44); font-size: 34px;" rel="noopener noreferrer">
 <span class="elButtonMain"><i class="fa_prepended fas fa-angle-double-right" contenteditable="false"></i> Yes, I Want To Change My Life </span>
 <span class="elButtonSub"></span>
 </a>
@@ -230,10 +230,10 @@ Share This With Your Friends And Family</h2>
 <div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-91561" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
 <img src="https://i.imgur.com/BX8RsB5.png" class="elIMG ximg" alt="">
 </div>
-<div class="de elImageWrapper de-image-block elAlign_center elMargin0 hiddenElementTools ui-droppable de-editable" id="tmp_image-52012" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
+<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable hiddenElementTools de-editable" id="tmp_image-52012" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
 <img src="https://i.imgur.com/GdKvwr6.png" class="elIMG ximg" alt="">
 </div>
-<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable hiddenElementTools de-editable" id="tmp_image-71875" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
+<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-71875" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
 <img src="https://i.imgur.com/HCULsAn.png" class="elIMG ximg" alt="">
 </div>
 <div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-74486" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false">
@@ -267,7 +267,7 @@ Share This With Your Friends And Family</h2>
 <img src="https://i.giphy.com/media/W3MyhCrgfBlXDV349M/giphy.webp" class="elIMG ximg" alt="" width="200">
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="tmp_button-85521" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none; cursor: pointer;" data-element-theme="customized" aria-disabled="false">
-<a href="http://pages.today/sasdigiemail" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1_3 elButtonShadowN3 elButtonTxtColor2 elBTNone elButtonBlock" style="color: rgb(255, 255, 255); background: rgb(228, 59, 44); font-size: 34px;" rel="noopener noreferrer">
+<a href="https://offerus.design/freetrainingsasemail" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1_3 elButtonShadowN3 elButtonTxtColor2 elBTNone elButtonBlock ea-buttonElevate" style="color: rgb(255, 255, 255); background: rgb(228, 59, 44); font-size: 34px;" rel="noopener noreferrer">
 <span class="elButtonMain"><i class="fa_prepended fas fa-angle-double-right" contenteditable="false"></i>Click Here To Change Your Life</span>
 <span class="elButtonSub"></span>
 </a>
